# mcpb

./: .gitignore  MANIFEST.md  README.md
examples/: README.md
examples/calculator-rust/: .gitignore  .mcpbignore  Cargo.toml  Dockerfile  README.md  manifest.json
examples/calculator-rust/src/: main.rs
examples/file-manager-python/: manifest.json  pyproject.toml
examples/hello-world-node/server/: index.js
examples/hello-world-uv/: README.md  manifest.json
src/cli/: cli.ts  init.3tg.md  init.ts  pack.ts
src/node/: sign.ts  validate.ts
src/schemas/: 0.4.ts
src/schemas_loose/: 0.4.ts
src/shared/: constants.ts
test/: cli.test.ts  icon-validation.test.ts  init2.test.ts  sign.e2e.test.ts  validate.test.ts
