[package]
name = "mcp-calculator"
version = "1.0.0"
edition = "2024"

[dependencies]
rmcp = { version = "1.2.0", features = ["server", "macros", "transport-io", "schemars"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "std", "fmt"] }
schemars = "1.0"

[profile.release]
strip = true
lto = true
